--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Add popins google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"> 
     <!-- Add main css file  -->
     <link rel="stylesheet" href="style.css">
     <title>Developer Portfolio V1.0</title>
 </head>
 <body>
-    <h1>Initial State</h1>
+    <main>
+        <section class="hero-part">
+            <div class="half-side">
+                <h1>Welcome To</h1>
+                <h1><span>Mohammad Ali</span> World!</h1>
+                <h2>Website Design and UI-UX Specialist</h2>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                <a  href="https://facebook.com/msali.24" class="btn" target="_blank">Hire me!</a>
+            </div>
+            <div class="half-side">
+                <img src="img/my-bg.png" alt="Mohammad ali sakib offensive look">
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
