Initial Complete site

--- a/index.html
+++ b/index.html
@@ -26,6 +26,38 @@
                 <img src="img/my-bg.png" alt="Mohammad ali sakib offensive look">
             </div>
         </section>
+        <section class="dream-area">
+            <div class="half-side">
+                <img src="img/my-bg2.png" alt="Sakib another Portfolio ">
+            </div>
+            <div class="half-side">
+                <h1>Dream Big</h1>
+                <h2>Become a Web Developer</h2>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <a href="https://facebook.com/msali.24 " class="btn" target="_blank">DOWNLOAD RESUME</a>
+            </div>
+        </section>
+        <h1>Experience</h1>
+        <section class="exp-block">
+            
+            <div class="half-side card">
+                <div class="card-body">
+                    <h1>Full stack Web Developer</h1>
+                    <h2><span>2021-Present | Pro Level Developer</span></h2>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                </div>
+            </div>
+            <div class="half-side card">
+                <div class="card-body">
+                    <h1>Baby Web Developer</h1>
+                    <h2><span>2020-2021 | Programming Hero Learner</span></h2>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <span>&copy; 2020-2021 | Mohammad ali Sakib</span>
+        </footer>
 
     </main>
 </body>
