--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <main>
-        <section class="hero-part">
+        <section class="hero-part flexible-content">
             <div class="half-side">
                 <h1>Welcome To</h1>
-                <h1><span>Mohammad Ali</span> World!</h1>
+                <h1><span class="orange-color">Mohammad Ali</span> World!</h1>
                 <h2>Website Design and UI-UX Specialist</h2>
                 <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
                 <a  href="https://facebook.com/msali.24" class="btn" target="_blank">Hire me!</a>
@@ -26,7 +26,7 @@
                 <img src="img/my-bg.png" alt="Mohammad ali sakib offensive look">
             </div>
         </section>
-        <section class="dream-area">
+        <section class="dream-area flexible-content">
             <div class="half-side">
                 <img src="img/my-bg2.png" alt="Sakib another Portfolio ">
             </div>
@@ -37,21 +37,23 @@
                 <a href="https://facebook.com/msali.24 " class="btn" target="_blank">DOWNLOAD RESUME</a>
             </div>
         </section>
-        <h1>Experience</h1>
+        
         <section class="exp-block">
-            
-            <div class="half-side card">
-                <div class="card-body">
-                    <h1>Full stack Web Developer</h1>
-                    <h2><span>2021-Present | Pro Level Developer</span></h2>
-                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <h1>Experience</h1>
+            <div class="flexible-content">
+                <div class="experimence-item">
+                    <div class="card-body">
+                        <h1>Full stack Web Developer</h1>
+                        <h2><span class="orange-color">2021-Present | Pro Level Developer</span></h2>
+                        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="half-side card">
-                <div class="card-body">
-                    <h1>Baby Web Developer</h1>
-                    <h2><span>2020-2021 | Programming Hero Learner</span></h2>
-                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                <div class="experimence-item">
+                    <div class="card-body">
+                        <h1>Baby Web Developer</h1>
+                        <h2><span class="orange-color">2020-2021 | Programming Hero Learner</span></h2>
+                        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                    </div>
                 </div>
             </div>
         </section>
